# ml-core-cpp

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
app/: main.cpp  test_runner.cpp
data/metadata/: nasa_kc1_software_defects.md  stock_ohlcv_engineered.md  wine.md
data/metadata/processing_specs/: nasa_kc1_software_defects.json  stock_ohlcv_engineered.json  wine.json
data/processed/: nasa_kc1_software_defects.csv  wine.csv
docs/general/: action-plan.md  build-notes.md  dl-roadmap-entry.md  eigen-quick-reference.md  experiment-inventory.md  ml-core-wrap-up.md  ml-core.md  model-inventory.md  repo-structure.md
docs/practical/: dataset-conventions.md  dataset-processing-workflow.md  practical-output-schemas.md  practical-workflows-summary.md  processed-dataset-schemas.md
docs/practical/math-maps/: decision-tree-math-map.md  gaussian-naive-bayes-math-map.md  gradient-boosting-regressor-math-map.md  kmeans-math-map.md  knn-classifier-math-map.md  linear-regression-math-map.md  linear-svm-math-map.md  logistic-regression-math-map.md  pca-math-map.md  random-forest-math-map.md  softmax-regression-math-map.md  tiny-mlp-binary-classifier-math-map.md
docs/practical/models/: decision-tree-usage.md  gaussian-naive-bayes-usage.md  gradient-boosting-regressor-usage.md  kmeans-usage.md  knn-classifier-usage.md  linear-regression-usage.md  linear-svm-usage.md  logistic-regression-usage.md  pca-usage.md  random-forest-usage.md  softmax-regression-usage.md  tiny-mlp-binary-classifier-usage.md
docs/practical/sweeps/: binary-classification-sweeps.md  multiclass-knn-sweep.md  regression-gradient-boosting-sweep.md  unsupervised-pca-kmeans-sweep.md
docs/theory/: calculus-foundations.md  distance-and-kernel-thinking.md  dl-bridge.md  evaluation-methodology.md  linear-models.md  logistic-regression.md  math-foundations.md  optimization.md  probabilistic-ml.md  statistical-learning-foundations.md  tree-ensembles.md  trees-and-ensembles.md  unsupervised-learning.md
experiments/common/: manual_test_utils.cpp  manual_test_utils.hpp
experiments/phase-1-math-sanity/: README.md  phase1_math_sanity.cpp  phase1_math_sanity.hpp
experiments/phase-10-dl-bridge/: phase10_dl_bridge_sanity.cpp  phase10_dl_bridge_sanity.hpp
experiments/phase-11-csv-dataset-loader/: phase11_csv_dataset_loader_sanity.cpp  phase11_csv_dataset_loader_sanity.hpp
experiments/phase-11-practical-workflows/: phase11_practical_workflows_sanity.cpp  phase11_practical_workflows_sanity.hpp
experiments/phase-2-evaluation-methodology/: README.md  phase2_evaluation_sanity.cpp  phase2_evaluation_sanity.hpp
experiments/phase-3-linear-models/: README.md  phase3_linear_models_sanity.cpp  phase3_linear_models_sanity.hpp
experiments/phase-4-logistic-regression/: phase4_logistic_regression_sanity.cpp  phase4_logistic_regression_sanity.hpp  phase4_softmax_regression_sanity.cpp  phase4_softmax_regression_sanity.hpp
experiments/phase-5-optimization/: phase5_optimization_sanity.cpp  phase5_optimization_sanity.hpp
experiments/phase-6-trees-ensembles/: phase6_trees_sanity.cpp  phase6_trees_sanity.hpp  phase6b_trees_ensembles_sanity.cpp  phase6b_trees_ensembles_sanity.hpp
experiments/phase-7-distance-kernel/: phase7_distance_kernel_sanity.cpp  phase7_distance_kernel_sanity.hpp
experiments/phase-8-unsupervised/: phase8_unsupervised_sanity.cpp  phase8_unsupervised_sanity.hpp
experiments/phase-9-probabilistic-ml/: phase9_probabilistic_ml_sanity.cpp  phase9_probabilistic_ml_sanity.hpp
include/ml/common/: baselines.hpp  classification_evaluation.hpp  classification_metrics.hpp  classification_utils.hpp  cross_validation.hpp  csv_dataset_loader.hpp  data_split.hpp  dataset.hpp  evaluation.hpp  evaluation_harness.hpp  experiment_summary.hpp  math_ops.hpp  multiclass_metrics.hpp  numeric_utils.hpp  preprocessing.hpp  preprocessing_pipeline.hpp  regression_metrics.hpp  shape_validation.hpp  statistics.hpp  (+1 more)
notebooks/practical-workflows/: 01_regression_outputs.ipynb  02_binary_classification_outputs.ipynb  03_multiclass_classification_outputs.ipynb  04_unsupervised_outputs.ipynb  05_hyperparameter_sweeps.ipynb
scripts/: prepare_dataset.py  summarize_hyperparameter_sweeps.py  verify_practical_outputs.py
src/common/: baselines.cpp  classification_evaluation.cpp  classification_metrics.cpp  classification_utils.cpp  cross_validation.cpp  csv_dataset_loader.cpp  data_split.cpp  evaluation.cpp  evaluation_harness.cpp  experiment_summary.cpp  math_ops.cpp  multiclass_metrics.cpp  numeric_utils.cpp  preprocessing.cpp  preprocessing_pipeline.cpp  regression_metrics.cpp  shape_validation.cpp  statistics.cpp
src/distance/: distance_metrics.cpp  kernels.cpp  knn_classifier.cpp
src/dl_bridge/: activation.cpp  mlp.cpp  perceptron.cpp
src/linear_models/: linear_regression.cpp  linear_svm.cpp  logistic_regression.cpp  softmax_regression.cpp
src/optimization/: gradient_descent.cpp  mini_batch_gradient_descent.cpp  model_optimization_adapters.cpp  sgd.cpp  training_history.cpp
src/probabilistic/: naive_bayes.cpp
src/trees/: best_first_tree_builder.cpp  bootstrap.cpp  class_weights.cpp  decision_tree.cpp  gradient_boosting.cpp  random_forest.cpp  regression_tree.cpp  split_scoring.cpp  tree_builder.cpp
src/unsupervised/: kmeans.cpp  pca.cpp
src/workflows/: binary_classification_comparison.cpp  hyperparameter_sweeps.cpp  multiclass_classification_comparison.cpp  output_writer.cpp  regression_comparison.cpp  unsupervised_comparison.cpp
(+37 files in other folders)
